clippy_final_error.txt
cargo :     Checking AgroCLI v1.2.0 
(C:\Users\setia\Downloads\AgroCLI)
At line:1 char:1
+ cargo clippy --all-targets 
--all-features -- -D warnings 2>&1 | Out-F 
...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified 
   : (    Checking Ag...nloads\AgroCLI):S  
  tring) [], RemoteException
    + FullyQualifiedErrorId : NativeComman 
   dError
 
error[E0658]: attributes on expressions 
are experimental
   --> src\db\mod.rs:272:21
    |
272 |                     
#[allow(clippy::cast_possible_truncation)]
    |                     
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    |
    = note: see issue #15701 <https://githu
b.com/rust-lang/rust/issues/15701> for 
more information

For more information about this error, try 
`rustc --explain E0658`.
error: could not compile `AgroCLI` (bin 
"AgroCLI") due to 1 previous error
warning: build failed, waiting for other 
jobs to finish...
error: could not compile `AgroCLI` (bin 
"AgroCLI" test) due to 1 previous error
